# bookshelf

./: .env  Cargo.toml  docker-compose.yml  justfile  readme.md
.sqlx/: query-0df4ea57b57419b89db2dba7288da66cd241b2093b8ae74b6ded8761d55338af.json  query-151222d8cbc3d60eddeace7d17a803747c861fe123434bdb4c0e825ab21cb073.json  query-155d56b3691caa7aa19765006377d4e96537be7229db5153c525622ca2a79f05.json  query-20d5bf61331b13a61a4feb2afecc6b771fcf9954d3a76e367150aaa4c291547d.json  query-218c0d1c53941ebe7c3f8da76ee7c3df471e2eac79a8d510e7ca7326d559bf83.json  query-24436c4dc9cfb8fced3a1a345d93f7b47038e25826b11bcefe542d93aa567831.json  query-26c9fa4a5475c1d68ea813067517db3a972879af2da0e11939a661367d0df816.json  query-395e584848054346a675dddde27456d666ee8b0be50d41fe2ad5b663cdd2438f.json  query-4f3d10f2a577e5f76efed460979ac69d2de14fe52177bd0bbce8847cd547fc6e.json  query-56177c67757bfe375dd5bcddf109e01a3ee21921aa532ef1f3fb280f9c7d47af.json  query-69ff74bead6c1caeb46a139c8459a1bf02d97602091c48508336315d42acee3e.json  query-7852b5bcccb7ce385cea5c5a4026c574b2b034b9bae636c7c3deabbd6426883c.json  query-85159fc5b72294ecc76064ba4cc442807e623adbf1de585629cf43980d8d4e2e.json  query-8dcd739e4b809bd7becf67e90dcadf191830744c908e5694420e89ceeb17e679.json  query-8e4b717e6159cff133a4d57d0b928aa685b156f51bbb10ed8ecb2b6532a5d16c.json  query-9379f7303887e01e090860cd8719e0d237841515c9451524b6efee536e8b4e8e.json  query-a1061cf2c96c13381680fddb1c958372fab698a6627a9b3977ba815974cfa8ac.json  query-a62e34c236a97f3d1f11666c810b13f9987039f428e4643fb48232d40e6ab238.json  (+6 more)
src/: db.rs  factories.rs  lib.rs  (+3 more)
(+7 files in other folders)
