[package]
name = "bookshelf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "tls-native-tls", "macros"] }
fake = { version = "4", features = ["derive", "chrono"] }
dotenvy = "0.15"
